--- a/habits.html
+++ b/habits.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="min-h-screen bg-gradient-to-br from-sky-400 to-purple-900">
-    <div class="max-w-5xl mx-auto py-12 px-4">
+    <div class="max-w-7xl mx-auto py-12 px-4">
 
         <header class="mb-8 text-center">
             <div class="bg-gradient-to-br from-indigo-400/50 to-fuchsia-900 rounded-xl p-5 text-indigo-50 mb-4">
@@ -36,24 +36,100 @@
                         <input type="text" id="title" placeholder="Task title"
                             class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2" />
                     </div>
+                    <div class="flex flex-row gap-3 place-content-around">
 
-                    <div>
-                        <label for="description" class="block mb-1 font-medium">Description</label>
-                        <textarea id="description" placeholder="Task description"
-                            class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2"></textarea>
+                        <div class="md:w-1/3">
+                            <label for="frequency" class="block mb-1 font-medium">Frequency</label>
+                            <select id="priority"
+                                class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
+                                <option selected disabled>Select priority</option>
+                                <option>Daily</option>
+                                <option>Medium</option>
+                            </select>
+                        </div>
+
+                        <div class="md:w-1/3">
+                            <label for="priority" class="block mb-1 font-medium">Priority</label>
+                            <select id="priority"
+                                class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
+                                <option selected disabled>Select priority</option>
+                                <option>High</option>
+                                <option>Medium</option>
+                                <option>Low</option>
+                            </select>
+                        </div>
+
                     </div>
 
-                    <div>
-                        <label for="priority" class="block mb-1 font-medium">Priority</label>
-                        <select id="priority"
-                            class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
-                            <option selected disabled>Select priority</option>
-                            <option>High</option>
-                            <option>Medium</option>
-                            <option>Low</option>
-                        </select>
+                    <div class="flex flex-row gap-3 place-content-around">
+                        <div class="md:w-1/3">
+                            <label for="date-day" class="block mb-1 font-medium">Day</label>
+                            <select id="date-day"
+                                class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
+                                <option selected disabled>Select day</option>
+                                <option value="01">1</option>
+                                <option value="02">2</option>
+                                <option value="03">3</option>
+                                <option value="04">4</option>
+                                <option value="05">5</option>
+                                <option value="06">6</option>
+                                <option value="07">7</option>
+                                <option value="08">8</option>
+                                <option value="09">9</option>
+                                <option value="10">10</option>
+                                <option value="11">11</option>
+                                <option value="12">12</option>
+                                <option value="13">13</option>
+                                <option value="14">14</option>
+                                <option value="15">15</option>
+                                <option value="16">16</option>
+                                <option value="17">17</option>
+                                <option value="18">18</option>
+                                <option value="19">19</option>
+                                <option value="20">20</option>
+                                <option value="21">21</option>
+                                <option value="22">22</option>
+                                <option value="23">23</option>
+                                <option value="24">24</option>
+                                <option value="25">25</option>
+                                <option value="26">26</option>
+                                <option value="27">27</option>
+                                <option value="28">28</option>
+                                <option value="29">29</option>
+                                <option value="30">30</option>
+                                <option value="31">31</option>
+                            </select>
+                        </div>
+                        <div class="md:w-1/3">
+                            <label for="month" class="block mb-1 font-medium">Month</label>
+                            <select id="month"
+                                class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
+                                <option selected disabled>Select Month</option>
+                                <option value="01">January</option>
+                                <option value="02">Februry</option>
+                                <option value="03">March</option>
+                                <option value="04">April</option>
+                                <option value="05">May</option>
+                                <option value="06">Jun</option>
+                                <option value="07">July</option>
+                                <option value="08">Agoust</option>
+                                <option value="09">September</option>
+                                <option value="10">October</option>
+                                <option value="11">November</option>
+                                <option value="12">Dicember</option>
+                            </select>
+                        </div>
+                        <div class="md:w-1/3">
+                            <label for="year" class="block mb-1 font-medium">Year</label>
+                            <select id="year"
+                                class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
+                                <option selected disabled>Select Year</option>
+                                <option value="25">2025</option>
+                                <option value="26">2026</option>
+                                <option value="27">2027</option>
+                            </select>
+                        </div>
                     </div>
-
                     <button class="bg-violet-600 text-white px-4 py-2 rounded hover:bg-violet-700">
                         Create task
                     </button>
@@ -99,33 +175,139 @@
 
         <!-- Tasks List -->
         <section>
-            <div id="tasks-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+            <div id="tasks-list1" class="flex flex-row flex-wrap">
+
+                <div class="p-4 md:w-1/4">
+                    <div class="h-full border-2 border-gray-300 border-opacity-60 rounded-lg">
+                        <div class="p-6">
+                            <div class="flex flex-row place-content-between">
+                                <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE</h1>
+                                <div class="hover:bg-white flex justify-center rounded-lg">
+                                    <button
+                                        class="px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                                        <img src="assets/icons/pencil-fill.svg" alt="" class="h-5 my-1">
+                                    </button>
+                                </div>
+                            </div>
+                            <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
+                            <h3 class="title-font text-lg font-medium text-green-700 my-3">Low</h3>
+                            <div class="flex flex-row gap-3 place-content-around">
+                                <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
+                                <button class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">
+                                    <p>Pending</p>
+                                </button>
+                                <div class="hover:bg-white flex justify-center rounded-lg">
+                                    <button
+                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                                        <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-4 md:w-1/4">
+                    <div class="h-full border-2 border-yellow-300 border-opacity-60 rounded-lg">
+                        <div class="p-6">
+                            <div class="flex flex-row place-content-between">
+                                <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE</h1>
+                                <div class="hover:bg-white flex justify-center rounded-lg">
+                                    <button
+                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                                        <img src="assets/icons/pencil-fill.svg" alt="" class="h-5">
+                                    </button>
+                                </div>
+                            </div>
+                            <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
+                            <h3 class="title-font text-lg font-medium text-gray-700 my-3">Low</h3>
+                            <div class="flex flex-row gap-3 place-content-around">
+                                <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
+                                <button class="bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700">
+                                    <p>Pending</p>
+                                </button>
+                                <div class="hover:bg-white flex justify-center rounded-lg">
+                                    <button
+                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                                        <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-4 md:w-1/4">
+                    <div class="h-full border-2 border-green-300 border-opacity-60 rounded-lg">
+                        <div class="p-6">
+                            <div class="flex flex-row place-content-between">
+                                <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE</h1>
+                                <div class="hover:bg-white flex justify-center rounded-lg">
+                                    <button
+                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                                        <img src="assets/icons/pencil-fill.svg" alt="" class="h-5">
+                                    </button>
+                                </div>
+                            </div>
+                            <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
+                            <h3 class="title-font text-lg font-medium text-gray-700 my-3">Low</h3>
+
+                            <div class="flex flex-row gap-3 place-content-around">
+                                <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
+                                <button class="bg-lime-600 text-white px-4 py-2 rounded hover:bg-lime-700">
+                                    <p>Pending</p>
+                                </button>
+                                <div class="hover:bg-white flex justify-center rounded-lg">
+                                    <button
+                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                                        <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="tasks-list2" class="grid grid-cols-2 gap-4">
+
+            </div>
+            <div id="tasks-list3" class="grid grid-cols-3 gap-4">
+
+            </div>
         </section>
     </div>
 
     <!-- Modal Edit Task (estructura visual, sin JS) -->
-    <div id="editTaskModal" class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center">
-        <div class="bg-white rounded-lg w-full max-w-2xl">
+    <div id="editTaskModal" class="hidden absolute inset-0 bg-black bg-opacity-60 items-center justify-center">
+        <div
+            class="bg-gradient-to-br from-indigo-400 to-fuchsia-900 rounded-lg w-full max-w-2xl absolute left-80 bottom-20">
             <div class="flex justify-between items-center p-4 border-b">
-                <h5 class="text-lg font-semibold">Edit task</h5>
+                <h5 class="text-lg font-semibold">Edit habit</h5>
                 <button class="text-gray-500 text-xl">&times;</button>
             </div>
 
             <div class="p-6">
                 <form id="editTaskForm" class="space-y-4">
                     <div>
-                        <label for="editTitle" class="block mb-1 font-medium">Title</label>
-                        <input type="text" id="editTitle" class="w-full border rounded px-3 py-2" />
+                        <label for="edit-title" class="block mb-1 font-medium">Title</label>
+                        <input id="edit-title"
+                            class="w-full border rounded px-3 py-2 bg-gradient-to-br from-sky-400/25 to-purple-900/25"
+                            placeholder="New title"></input>
                     </div>
 
                     <div>
-                        <label for="editDescription" class="block mb-1 font-medium">Description</label>
-                        <textarea id="editDescription" class="w-full border rounded px-3 py-2"></textarea>
+                        <label for="edit-frequency" class="block mb-1 font-medium">Frequency</label>
+                        <select id="edit-frequency"
+                            class="w-full border rounded px-3 py-2 bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                            <option selected disabled>Frecuency</option>
+                            <option>Daily</option>
+                            <option>Weekly</option>
+                        </select>
                     </div>
 
                     <div>
-                        <label for="editPriority" class="block mb-1 font-medium">Priority</label>
-                        <select id="editPriority" class="w-full border rounded px-3 py-2">
+                        <label for="edit-priority" class="block mb-1 font-medium">Priority</label>
+                        <select id="edit-priority"
+                            class="w-full border rounded px-3 py-2 bg-gradient-to-br from-sky-400/25 to-purple-900/25">
+                            <option selected disabled>Priority</option>
                             <option>Low</option>
                             <option>Medium</option>
                             <option>High</option>
@@ -138,7 +320,7 @@
                 <button class="bg-gray-300 px-4 py-2 rounded">
                     Cancel
                 </button>
-                <button id="saveEdit" class="bg-red-600 text-white px-4 py-2 rounded hover:bg-red-700">
+                <button id="saveEdit" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">
                     Save changes
                 </button>
             </div>
