Feat: first script logic part

--- a/habits.html
+++ b/habits.html
@@ -13,10 +13,12 @@
     <div class="max-w-7xl mx-auto py-12 px-4">
 
         <header class="mb-8 text-center">
-            <div class="bg-gradient-to-br from-indigo-400/50 to-fuchsia-900 rounded-xl p-5 text-indigo-50 mb-4">
+            <div
+                class="flex flex-row bg-gradient-to-br from-indigo-400/50 to-fuchsia-900 rounded-xl p-5 text-indigo-50 mb-4 gap-1 justify-center">
                 <p id="greet">
-                    Hi <span id="user-name" class="text-fuchsia-500 font-bold">name</span>, welcome to
-                    <strong>Habits Flow</strong>
+                    Hi
+                <p id="user-name" class="text-fuchsia-400 font-bold"></p>, welcome to
+                <strong>Habits Flow</strong>
                 </p>
             </div>
 
