--- a/habits.html
+++ b/habits.html
@@ -31,42 +31,40 @@
         <section class="bg-gradient-to-br from-indigo-400 to-fuchsia-900 rounded-lg shadow mb-6">
             <div class="p-6">
                 <h5 class="text-lg font-semibold mb-4">Create new task</h5>
-
-                <form id="form" class="space-y-4">
+                <form id="habits-form" class="space-y-4">
                     <div>
-                        <label for="title" class="block mb-1 font-medium">Title</label>
-                        <input type="text" id="title" placeholder="Task title"
+                        <label for="habit-title" class="block mb-1 font-medium">Title</label>
+                        <input type="text" id="habit-title" placeholder="Task title"
                             class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2" />
                     </div>
+
                     <div class="flex flex-row gap-3 place-content-around">
-
                         <div class="md:w-1/3">
-                            <label for="frequency" class="block mb-1 font-medium">Frequency</label>
-                            <select id="priority"
+                            <label for="habit-frequency" class="block mb-1 font-medium">Frequency</label>
+                            <select id="habit-frequency"
                                 class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
-                                <option selected disabled>Select priority</option>
-                                <option>Daily</option>
-                                <option>Medium</option>
+                                <option selected disabled>Select frequency</option>
+                                <option value="Daily">Daily</option>
+                                <option value="Weekly">Weekly</option>
                             </select>
                         </div>
 
                         <div class="md:w-1/3">
-                            <label for="priority" class="block mb-1 font-medium">Priority</label>
-                            <select id="priority"
+                            <label for="habit-priority" class="block mb-1 font-medium">Priority</label>
+                            <select id="habit-priority"
                                 class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
                                 <option selected disabled>Select priority</option>
-                                <option>High</option>
-                                <option>Medium</option>
-                                <option>Low</option>
+                                <option value="High">High</option>
+                                <option value="Medium">Medium</option>
+                                <option value="Low">Low</option>
                             </select>
                         </div>
-
                     </div>
 
                     <div class="flex flex-row gap-3 place-content-around">
                         <div class="md:w-1/3">
-                            <label for="date-day" class="block mb-1 font-medium">Day</label>
-                            <select id="date-day"
+                            <label for="habit-day" class="block mb-1 font-medium">Day</label>
+                            <select id="habit-day"
                                 class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
                                 <option selected disabled>Select day</option>
                                 <option value="01">1</option>
@@ -103,8 +101,8 @@
                             </select>
                         </div>
                         <div class="md:w-1/3">
-                            <label for="month" class="block mb-1 font-medium">Month</label>
-                            <select id="month"
+                            <label for="habit-month" class="block mb-1 font-medium">Month</label>
+                            <select id="habit-month"
                                 class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
                                 <option selected disabled>Select Month</option>
                                 <option value="01">January</option>
@@ -122,8 +120,8 @@
                             </select>
                         </div>
                         <div class="md:w-1/3">
-                            <label for="year" class="block mb-1 font-medium">Year</label>
-                            <select id="year"
+                            <label for="habit-year" class="block mb-1 font-medium">Year</label>
+                            <select id="habit-year"
                                 class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 w-full rounded px-3 py-2">
                                 <option selected disabled>Select Year</option>
                                 <option value="25">2025</option>
@@ -176,104 +174,32 @@
         </section>
 
         <!-- Tasks List -->
-        <section>
-            <div id="tasks-list1" class="flex flex-row flex-wrap">
+        <section id="tasks-list-pending" class="hidden flex flex-row flex-wrap">
+            <article class="p-4 md:w-1/4">
+                <div class="h-full border-2 border-gray-300 border-opacity-60 rounded-lg">
+                    <div class="p-6">
 
-                <div class="p-4 md:w-1/4">
-                    <div class="h-full border-2 border-gray-300 border-opacity-60 rounded-lg">
-                        <div class="p-6">
-                            <div class="flex flex-row place-content-between">
-                                <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE</h1>
-                                <div class="hover:bg-white flex justify-center rounded-lg">
-                                    <button
-                                        class="px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                        <img src="assets/icons/pencil-fill.svg" alt="" class="h-5 my-1">
-                                    </button>
-                                </div>
-                            </div>
-                            <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
-                            <h3 class="title-font text-lg font-medium text-green-700 my-3">Low</h3>
-                            <div class="flex flex-row gap-3 place-content-around">
-                                <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
-                                <button class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">
-                                    <p>Pending</p>
-                                </button>
-                                <div class="hover:bg-white flex justify-center rounded-lg">
-                                    <button
-                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                        <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
-                <div class="p-4 md:w-1/4">
-                    <div class="h-full border-2 border-yellow-300 border-opacity-60 rounded-lg">
-                        <div class="p-6">
-                            <div class="flex flex-row place-content-between">
-                                <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE</h1>
-                                <div class="hover:bg-white flex justify-center rounded-lg">
-                                    <button
-                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                        <img src="assets/icons/pencil-fill.svg" alt="" class="h-5">
-                                    </button>
-                                </div>
-                            </div>
-                            <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
-                            <h3 class="title-font text-lg font-medium text-gray-700 my-3">Low</h3>
-                            <div class="flex flex-row gap-3 place-content-around">
-                                <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
-                                <button class="bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700">
-                                    <p>Pending</p>
-                                </button>
-                                <div class="hover:bg-white flex justify-center rounded-lg">
-                                    <button
-                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                        <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
+            </article>
+        </section>
+        <section id="tasks-list-progress" class="hidden flex flex-row flex-wrap">
+            <article class="p-4 md:w-1/4">
+                <div class="h-full border-2 border-yellow-300 border-opacity-60 rounded-lg">
+                    <div class="p-6">
+
                     </div>
                 </div>
-                <div class="p-4 md:w-1/4">
-                    <div class="h-full border-2 border-green-300 border-opacity-60 rounded-lg">
-                        <div class="p-6">
-                            <div class="flex flex-row place-content-between">
-                                <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE</h1>
-                                <div class="hover:bg-white flex justify-center rounded-lg">
-                                    <button
-                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                        <img src="assets/icons/pencil-fill.svg" alt="" class="h-5">
-                                    </button>
-                                </div>
-                            </div>
-                            <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
-                            <h3 class="title-font text-lg font-medium text-gray-700 my-3">Low</h3>
+            </article>
+        </section>
+        <section id="tasks-list-completed" class="hidden flex flex-row flex-wrap">
+            <article class="p-4 md:w-1/4">
+                <div class="h-full border-2 border-green-300 border-opacity-60 rounded-lg">
+                    <div class="p-6">
 
-                            <div class="flex flex-row gap-3 place-content-around">
-                                <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
-                                <button class="bg-lime-600 text-white px-4 py-2 rounded hover:bg-lime-700">
-                                    <p>Pending</p>
-                                </button>
-                                <div class="hover:bg-white flex justify-center rounded-lg">
-                                    <button
-                                        class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                        <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="tasks-list2" class="grid grid-cols-2 gap-4">
-
-            </div>
-            <div id="tasks-list3" class="grid grid-cols-3 gap-4">
-
-            </div>
+            </article>
         </section>
     </div>
 
