Feat: Logic for savving habits in the user object

--- a/habits.html
+++ b/habits.html
@@ -130,7 +130,7 @@
                             </select>
                         </div>
                     </div>
-                    <button class="bg-violet-600 text-white px-4 py-2 rounded hover:bg-violet-700">
+                    <button type="submit" class="bg-violet-600 text-white px-4 py-2 rounded hover:bg-violet-700">
                         Create task
                     </button>
                 </form>
@@ -178,41 +178,7 @@
             <article class="p-4 md:w-1/4">
                 <div class="h-full border-2 border-gray-300 border-opacity-60 rounded-lg">
                     <div class="p-6">
-                        <article class="p-4 md:w-1/4">
-                            <div class="h-full border-2 border-gray-300 border-opacity-60 rounded-lg">
-                                <div class="p-6">
-                                    <div class="flex flex-row place-content-between">
-                                        <h1 id="habit-card-title"
-                                            class="tracking-widest text title-font font-medium text-black mb-1">TITLE
-                                        </h1>
-                                        <div class="hover:bg-white flex justify-center rounded-lg">
-                                            <button
-                                                class="px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                                <img src="assets/icons/pencil-fill.svg" alt="" class="h-5 my-1">
-                                            </button>
-                                        </div>
-                                        <div class="hover:bg-white flex justify-center rounded-lg">
-                                            <button
-                                                class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                                <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <h2 id="habit-card-frequency"
-                                        class="title-font text-lg font-medium text-sky-500 my-3">Daily
-                                    </h2>
-                                    <h3 id="habit-card-priority"
-                                        class="title-font text-lg font-medium text-green-600 my-3">Low</h3>
-                                    <div class="flex flex-row gap-3 place-content-between">
-                                        <h4 id="habit-card-date" class="title-font text-sm text-gray-700 pt-3">00/00/00
-                                        </h4>
-                                        <button class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">
-                                            <p>Pending</p>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
+
                     </div>
                 </div>
             </article>
@@ -221,36 +187,7 @@
             <article class="p-4 md:w-1/4">
                 <div class="h-full border-2 border-yellow-300 border-opacity-60 rounded-lg">
                     <div class="p-6">
-                        <article class="p-4 md:w-1/4">
-                            <div class="h-full border-2 border-yellow-300 border-opacity-60 rounded-lg">
-                                <div class="p-6">
-                                    <div class="flex flex-row place-content-between">
-                                        <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE
-                                        </h1>
-                                        <div class="hover:bg-white flex justify-center rounded-lg">
-                                            <button
-                                                class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                                <img src="assets/icons/pencil-fill.svg" alt="" class="h-5">
-                                            </button>
-                                        </div>
-                                        <div class="hover:bg-white flex justify-center rounded-lg">
-                                            <button
-                                                class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                                <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
-                                    <h3 class="title-font text-lg font-medium text-yellow-600 my-3">Medium</h3>
-                                    <div class="flex flex-row gap-3 place-content-between">
-                                        <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
-                                        <button class="bg-yellow-600 text-white px-4 py-2 rounded hover:bg-yellow-700">
-                                            In progress
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
+
                     </div>
                 </div>
             </article>
@@ -259,37 +196,7 @@
             <article class="p-4 md:w-1/4">
                 <div class="h-full border-2 border-green-300 border-opacity-60 rounded-lg">
                     <div class="p-6">
-                        <article class="p-4 md:w-1/4">
-                            <div class="h-full border-2 border-green-300 border-opacity-60 rounded-lg">
-                                <div class="p-6">
-                                    <div class="flex flex-row place-content-between">
-                                        <h1 class="tracking-widest text title-font font-medium text-black mb-1">TITLE
-                                        </h1>
-                                        <div class="hover:bg-white flex justify-center rounded-lg">
-                                            <button
-                                                class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                                <img src="assets/icons/pencil-fill.svg" alt="" class="h-5">
-                                            </button>
-                                        </div>
-                                        <div class="hover:bg-white flex justify-center rounded-lg">
-                                            <button
-                                                class="text-white px-4 rounded-lg hover:bg-gradient-to-br from-sky-400/25 to-purple-900/25">
-                                                <img src="assets/icons/trash-fill.svg" alt="" class="h-5">
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <h2 class="title-font text-lg font-medium text-sky-500 my-3">Daily</h2>
-                                    <h3 class="title-font text-lg font-medium text-rose-600 my-3">High</h3>
 
-                                    <div class="flex flex-row gap-3 place-content-between">
-                                        <h4 class="title-font text-sm text-gray-700 pt-3">00/00/00</h4>
-                                        <button class="bg-lime-600 text-white px-4 py-2 rounded hover:bg-lime-700">
-                                            <p>Completed</p>
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </article>
                     </div>
                 </div>
             </article>
