--- a/habits.html
+++ b/habits.html
@@ -144,7 +144,6 @@
             </div>
         </section>
 
-        <!-- Filters -->
         <section id="filters-container" class="bg-gradient-to-br from-indigo-400 to-fuchsia-900 rounded-lg shadow mb-6">
             <div class="p-6 flex flex-wrap gap-6 items-end">
                 <div>
@@ -153,10 +152,10 @@
                 </div>
 
                 <div class="flex flex-col">
-                    <label for="filter-status" class="mb-1 font-medium">Status</label>
-                    <select id="filter-status"
+                    <label for="status-filter" class="mb-1 font-medium">Status</label>
+                    <select id="status-filter"
                         class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 rounded px-3 py-2">
-                        <option>All tasks</option>
+                        <option value="all">All</option>
                         <option value="Pending">Pending</option>
                         <option value="In progress">In progress</option>
                         <option value="Completed">Completed</option>
@@ -164,10 +163,10 @@
                 </div>
 
                 <div class="flex flex-col">
-                    <label for="filter-priority" class="mb-1 font-medium">Priority</label>
-                    <select id="filter-priority"
+                    <label for="priority-filter" class="mb-1 font-medium">Priority</label>
+                    <select id="priority-filter"
                         class="bg-gradient-to-br from-sky-400/25 to-purple-900/25 rounded px-3 py-2">
-                        <option>All priorities</option>
+                        <option value="all">All</option>
                         <option value="High">High</option>
                         <option value="Medium">Medium</option>
                         <option value="Low">Low</option>
@@ -180,26 +179,25 @@
             </div>
         </section>
 
-        <!-- Tasks List -->
-        <section id="tasks-list-pending" class="flex flex-row flex-wrap">
-            <article id="article1" class="p-4 md:w-1/4 flex flex-col gap-4">
+        <section class="flex flex-row w-full items-start gap-6">
+
+            <article id="article1" class="w-1/3 flex flex-col gap-4">
 
             </article>
-        </section>
-        <section id="tasks-list-progress" class="flex flex-row flex-wrap">
-            <article id="article2" class="p-4 md:w-1/4 flex flex-col gap-4">
+
+            <article id="article2" class="w-1/3 flex flex-col gap-4">
 
             </article>
-        </section>
-        <section id="tasks-list-completed" class="flex flex-row flex-wrap">
-            <article id="article3" class="p-4 md:w-1/4 flex flex-col gap-4">
+
+            <article id="article3" class="w-1/3 flex flex-col gap-4">
 
             </article>
+
         </section>
+
     </div>
 
-    <!-- Modal Edit Task (estructura visual, sin JS) -->
-    <div id="editTaskModal" class="hidden absolute inset-0 bg-black bg-opacity-60 items-center justify-center">
+    <div id="edit-task" class="hidden absolute inset-0 bg-black bg-opacity-60 items-center justify-center">
         <div
             class="bg-gradient-to-br from-indigo-400 to-fuchsia-900 rounded-lg w-full max-w-2xl absolute left-80 bottom-20">
             <div class="flex justify-between items-center p-4 border-b">
@@ -208,14 +206,13 @@
             </div>
 
             <div class="p-6">
-                <form id="editTaskForm" class="space-y-4">
+                <form id="edit-task-form" class="space-y-4">
                     <div>
                         <label for="edit-title" class="block mb-1 font-medium">Title</label>
                         <input id="edit-title"
                             class="w-full border rounded px-3 py-2 bg-gradient-to-br from-sky-400/25 to-purple-900/25"
                             placeholder="New title"></input>
                     </div>
-
                     <div>
                         <label for="edit-frequency" class="block mb-1 font-medium">Frequency</label>
                         <select id="edit-frequency"
@@ -225,7 +222,6 @@
                             <option value="Weekly">Weekly</option>
                         </select>
                     </div>
-
                     <div>
                         <label for="edit-priority" class="block mb-1 font-medium">Priority</label>
                         <select id="edit-priority"
@@ -236,16 +232,16 @@
                             <option value="Low">High</option>
                         </select>
                     </div>
+                    <div class="flex justify-end gap-3 p-4 border-t">
+                        <button type="button" id="cancel-edit" class="bg-gray-300 px-4 py-2 rounded">
+                            Cancel
+                        </button>
+                        <button type="submit" id="save-edit"
+                            class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">
+                            Save changes
+                        </button>
+                    </div>
                 </form>
-            </div>
-
-            <div class="flex justify-end gap-3 p-4 border-t">
-                <button class="bg-gray-300 px-4 py-2 rounded">
-                    Cancel
-                </button>
-                <button id="saveEdit" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">
-                    Save changes
-                </button>
             </div>
         </div>
     </div>
