--- a/habits-admin.html
+++ b/habits-admin.html
@@ -246,5 +246,5 @@
             </div>
         </div>
     </div>
-    <script type="module" src="./js/habits.js"></script>
+    <script type="module" src="./js/habits-admin.js"></script>
 </body>
