--- a/index.html
+++ b/index.html
@@ -32,8 +32,16 @@
                 Login
             </button>
         </div>
+        <!-- Register link -->
+        <div class="text-center pb-6">
+            <p class="text-sm text-indigo-400">
+                Don't have an account?
+                <a class="font-semibold text-purple-900 hover:text-red-400 transition-colors"
+                    href="register.html">Register</a>
+            </p>
+        </div>
     </form>
-    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="./js/login.js"></script>
 </body>
 
 
